; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/stm/extr_ltdc.c_to_drm_pixelformat.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/stm/extr_ltdc.c_to_drm_pixelformat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRM_FORMAT_ARGB8888 = common dso_local global i32 0, align 4
@DRM_FORMAT_RGBA8888 = common dso_local global i32 0, align 4
@DRM_FORMAT_RGB888 = common dso_local global i32 0, align 4
@DRM_FORMAT_RGB565 = common dso_local global i32 0, align 4
@DRM_FORMAT_ARGB1555 = common dso_local global i32 0, align 4
@DRM_FORMAT_ARGB4444 = common dso_local global i32 0, align 4
@DRM_FORMAT_C8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @to_drm_pixelformat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @to_drm_pixelformat(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %20 [
    i32 133, label %5
    i32 128, label %7
    i32 129, label %9
    i32 130, label %11
    i32 135, label %13
    i32 134, label %15
    i32 132, label %17
    i32 137, label %19
    i32 136, label %19
    i32 131, label %19
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @DRM_FORMAT_ARGB8888, align 4
  store i32 %6, i32* %2, align 4
  br label %21

7:                                                ; preds = %1
  %8 = load i32, i32* @DRM_FORMAT_RGBA8888, align 4
  store i32 %8, i32* %2, align 4
  br label %21

9:                                                ; preds = %1
  %10 = load i32, i32* @DRM_FORMAT_RGB888, align 4
  store i32 %10, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = load i32, i32* @DRM_FORMAT_RGB565, align 4
  store i32 %12, i32* %2, align 4
  br label %21

13:                                               ; preds = %1
  %14 = load i32, i32* @DRM_FORMAT_ARGB1555, align 4
  store i32 %14, i32* %2, align 4
  br label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @DRM_FORMAT_ARGB4444, align 4
  store i32 %16, i32* %2, align 4
  br label %21

17:                                               ; preds = %1
  %18 = load i32, i32* @DRM_FORMAT_C8, align 4
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %1, %1, %1
  br label %20

20:                                               ; preds = %1, %19
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %17, %15, %13, %11, %9, %7, %5
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
